syntax = "proto3";
package rarimo.rarimocore.oraclemanager;

import "gogoproto/gogo.proto";
import "oraclemanager/params.proto";
// this line is used by starport scaffolding # genesis/proto/import

option go_package = "gitlab.com/rarimo/rarimo-core/x/oraclemanager/types";

// GenesisState defines the oraclemanager module's genesis state.
message GenesisState {
  Params params = 1 [(gogoproto.nullable) = false];
  // this line is used by starport scaffolding # genesis/proto/state
}
